--- a/flatnotes/src/toastui-editor-theme.scss
+++ b/flatnotes/src/toastui-editor-theme.scss
@@ -10,12 +10,7 @@
 }
 
 .toastui-editor-contents {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+  h1, h2, h3, h4, h5, h6 {
     color: var(--colour-text);
   }
   p {
@@ -90,20 +85,18 @@
   border-color: var(--colour-border);
 }
 
-.toastui-editor-defaultUI-toolbar button {
-  border: 1px solid var(--colour-background-elevated);
-}
+.toastui-editor-defaultUI {
+  .tab-item.active {
+    background-color: var(--colour-background-elevated);
+    color: var(--colour-text);
+    border-color: var(--colour-border);
+  }
 
-.toastui-editor-defaultUI .tab-item.active {
-  background-color: var(--colour-background-elevated);
-  color: var(--colour-text);
-  border-color: var(--colour-border);
-}
-
-.toastui-editor-defaultUI .tab-item {
-  background-color: var(--colour-background-tint);
-  color: var(--colour-text-muted);
-  border-color: var(--colour-border);
+  .tab-item {
+    background-color: var(--colour-background-tint);
+    color: var(--colour-text-muted);
+    border-color: var(--colour-border);
+  }
 }
 
 .toastui-editor-md-tab-container .tab-item.active {
@@ -118,9 +111,14 @@
   background-position-y: -49px;
 }
 
-.toastui-editor-defaultUI-toolbar button:not(:disabled):hover {
-  background-color: var(--colour-background-tint);
-  border: 1px solid var(--colour-background-elevated);
+.toastui-editor-defaultUI-toolbar {
+  button {
+    border: 1px solid var(--colour-background-elevated);
+  }
+  button:not(:disabled):hover {
+    background-color: var(--colour-background-tint);
+    border: 1px solid var(--colour-background-elevated);
+  }
 }
 
 .toastui-editor-md-block-quote .toastui-editor-md-marked-text {
